--- a/users/templates/users/downloads.html
+++ b/users/templates/users/downloads.html
@@ -5,7 +5,9 @@
         <div class="card-body">
         <h1 class="card-title">Downloads</h1>
         <h4><u>Versions</u></h4>
-        <a class="card-text" href="{%url 'mizbee'%}">MizBee V1.3</a>
+        <a class="card-text" href="{%url 'mizbee'%}">MizBee V1.3</a><br><br>
+        <h4><u>GitHub Link</u></h4>
+        <a class="card-text" href="https://github.com/MQ-03/mizbee_web_app.git">MizBee V1.3</a>
         </div>
     </div>
 {% endblock content %}
